Fade out wrap guide and invisibles

--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -10,9 +10,9 @@
 @syntax-background-color: @bg;
 
 // Guide colors
-@syntax-wrap-guide-color: @dark-gray;
+@syntax-wrap-guide-color: fadeout(@gray, 95%);
 @syntax-indent-guide-color: fadeout(@gray, 80%);
-@syntax-invisible-character-color: @gray;
+@syntax-invisible-character-color: fadeout(@gray, 80%);
 
 // For find and replace markers
 @syntax-result-marker-color: @light-gray;
