Fade out comments

--- a/styles/base.less
+++ b/styles/base.less
@@ -64,7 +64,7 @@ atom-text-editor .search-results .marker.current-result .region,
 }
 
 .comment {
-  color: @light-gray;
+  color: fadeout(@light-gray, 50%);
 }
 
 .entity {
@@ -159,7 +159,7 @@ atom-text-editor .search-results .marker.current-result .region,
 .punctuation {
   &.definition {
     &.comment {
-      color: @light-gray;
+      color: fadeout(@light-gray, 50%);
     }
 
     &.string,
